--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
   "name": "tktk-installer",
   "version": "1.0.1",
-  "description": "A commandline installer for TKTK WordPress Theme",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"No test specified\""
+  "description": "A command-line installer for the TKTK WordPress Theme.",
+  "homepage": "https://github.com/brittonwalker/tktk-installer/tree/main",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/brittonwalker/tktk-installer.git"
   },
+  "author": "Britton Walker",
+  "license": "ISC",
   "bin": {
     "tktk-installer": "./bin/index.js"
   },
-  "homepage": "https://github.com/brittonwalker/tktk-installer/tree/main",
   "engines": {
     "node": ">=20.10.0",
     "npm": ">=10.2.3"
   },
   "keywords": [
     "WordPress",
-    "cli",
+    "CLI",
     "installer",
-    "npmtool",
-    "tktk",
+    "npm-tool",
+    "TKTK",
     "theme"
   ],
-  "author": "Britton Walker",
-  "license": "ISC",
+  "scripts": {
+    "test": "echo \"No tests specified\""
+  },
   "dependencies": {
     "@inquirer/prompts": "^7.3.2",
     "chalk": "^4.1.2",
